fix focus ring on ff + choose lang on enter + gap in mobile

--- a/packages/components/src/components/post-language-option/post-language-option.scss
+++ b/packages/components/src/components/post-language-option/post-language-option.scss
@@ -1,4 +1,5 @@
 @use '@swisspost/design-system-styles/core' as post;
+@use '@swisspost/design-system-styles/mixins/utilities' as utilities-mx;
 
 post-language-option {
   display: inline-block;
@@ -20,13 +21,13 @@ post-language-option {
     height: 100%;
     width: 100%;
     padding: var(--post-language-option-padding);
+    border-radius: 2px;
+    @include utilities-mx.focus-style;
   }
 }
 
 post-language-option:where([variant='list']) {
   :is(a, button) {
-    @include post.focus-style;
-    border-radius: 2px;
     width: 40px;
     height: 40px;
 
@@ -54,23 +55,20 @@ post-language-option:where([variant='menu']) {
     padding-inline: 24px;
     box-sizing: border-box;
     position: relative;
+    left: -1px;
+    width: calc(100% + 2px);
 
     &[aria-current='true'],
     &[aria-current='page'] {
       &::after {
         content: '';
-        left: -2px;
+        left: 0;
         height: 3px;
         background-color: #050400;
-        width: calc(100% + 4px);
+        width: 100%;
         display: block;
         position: absolute;
         bottom: 3px;
-      }
-
-      &:focus::after {
-        width: calc(100% - 5px);
-        left: 2px;
       }
 
       &:hover::after {
